--- a/scratch.html
+++ b/scratch.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>scratch</title>
+    <title>Interests</title>
 
 </head>
 
 <body>
-    scratch goes here
+    <h1>Check out this "borrowed" Tableau</h1>
     <br>
     <div class='tableauPlaceholder' id='viz1669662409379' style='position: relative'><noscript><a href='#'><img
                     alt='Dashboard 1 '
