--- a/scratch.html
+++ b/scratch.html
@@ -6,16 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interests</title>
+    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/mystyles.css">
+    
+
 
 </head>
 
 <body>
-    <h1>Check out this "borrowed" Tableau</h1>
+    <h1 class="site-heading-lower myfont">Check out this "borrowed" Tableau</h1>
     <br>
-    <div class='tableauPlaceholder' id='viz1669662409379' style='position: relative'><noscript><a href='#'><img
+    <div class='tableauPlaceholder opacity-75' id='viz1669662409379' style='position: relative'><noscript><a href='#'><img
                     alt='Dashboard 1 '
                     src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;NX&#47;NXCZMZNC8&#47;1_rss.png'
-                    style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+                    style='border: none' /></a></noscript><object class='tableauViz opacity-75' style='display:none;'>
             <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
             <param name='embed_code_version' value='3' />
             <param name='path' value='shared&#47;NXCZMZNC8' />
